# lv_dashboard

./: .gitmodules  CMakeLists.txt
src/: lv_dashboard.cpp  lv_dashboard.h
src/lv_fb/: lv_conf.h
src/lv_gtk/: lv_conf.h  lv_drv_conf.h
